--- a/css/nutssss.css
+++ b/css/nutssss.css
@@ -9,7 +9,7 @@ html, body {
 }
 
 body {
-    background-image: linear-gradient(to left, rgba(255, 0, 149, 0.2), rgba(0, 247, 255, 0.2)), url(../img/bg2.webp);
+    background-image: linear-gradient(to left, rgba(255, 0, 149, 0.2), rgba(0, 247, 255, 0.2)), url(https://kjimg10.360buyimg.com/ott/jfs/t1/7982/12/20472/70189/63d3576eFb31cda5a/e19148201edd333c.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
