--- a/css/nutssss.css
+++ b/css/nutssss.css
@@ -9,7 +9,7 @@ html, body {
 }
 
 body {
-    background-image: linear-gradient(to left, rgba(255, 0, 149, 0.2), rgba(0, 247, 255, 0.2)), url(https://preview.cloud.189.cn/image/imageAction?param=0BFD1BB1F94A969183595D3D144D3C6930B4E4AC15D2AF46CA66B1E5CD43FD825CB2D2CF87B3FBE14D0EC1CE38A3B25E3C9993C7AC042F4EA518046B890FCFC5F4D34FAA99E6C2E50BA559F059D240174E9A5836EB490F8B537095EAC82278090B832CE0A5CB12598DE788A7C7FC0C4B4C4188CF);
+    background-image: linear-gradient(to left, rgba(255, 0, 149, 0.2), rgba(0, 247, 255, 0.2)), url(https://xlenco.onmicrosoft.cn/i/bg2.png?updatedAt=1688133712670);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
