--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -39,7 +39,7 @@ p {
 @font-face {
   font-family: "Pacifico-Regular";
   font-display: swap;
-  src: url("/font/Pacifico-Regular.ttf") format("truetype");
+  src: url("/font/Pacifico-Regular-all.ttf") format("truetype");
 }
 
 @font-face {
